# cirrus-pyinstaller

./: .cirrus.yml  main.spec  pyproject.toml
