[tool.poetry]
name = "cirrus-pyinstaller"
version = "0.1.0"
description = ""
authors = ["Chidi Williams <williamschidi1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.7"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
